# site-stocks-analysis-Python-Flask

./: .gitignore  .gitlab-ci.yml  docker-compose.yaml  init.sh  pyproject.toml  readme.md  readme.txt
application/: .gitignore  app.py  config.py  pyproject.toml
application/application/: __init__.py
application/application/misc/: __init__.py
application/application/misc/iex/: all_symbols.csv  iex_main.py
application/application/misc/stocks_functions/: __init__.py  main.py
application/application/misc/stocks_getter/: __init__.py  errors.py  main.py
application/application/misc/user_db_funct/: __init__.py  (+1 more)
application/application/models/: __init__.py  database.py  db_functions.py  db_functions_plotting.py  db_stocks.py  engine.py  stocks.py  users.py
application/application/views/: __init__.py
application/jobs/: __init__.py  jobs.py
application/templates/: add_stock.html  base.html  index.html  indexes.html  test.html
application/templates/stocks/: stocks_index.html
application/templates/users/: login.html  register.html
application/tests/: __init__.py
application/tests/test_db/: test_db.py
application/tests/test_functions_db_stocks/: conftest.py  test_db_filling.py
application/tests/test_iex/: test_iex.py
application/tests/test_indexes_views/: test_indexes.py
application/tests/test_misc/: candlestick.html  test_misc.py
application/tests/test_stocks/: conftest.py  test_stocks.py
application/tests/test_users_db/: conftest.py  test_users.py
application/tests/test_views/: test_main_views.py
application/users/: __init__.py  users.py
(+4 files in other folders)
