[tool.poetry]
name = "application"
version = "0.1.0"
description = ""
authors = ["Kerosin3 <keromvp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
matplotlib = "^3.4.2"
iexfinance = "^0.5.0"
SQLAlchemy = "^1.4.22"
bokeh = "^2.3.3"
Flask-Migrate = "^3.1.0"
psycopg2 = "^2.9.1"
Flask-Login = "^0.5.0"
WTForms = "^2.3.3"
Flask-WTF = "^0.15.1"
Flask-Bcrypt = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
